fix: fix long headers overflowing on modal

--- a/packages/components/src/styles/Heading.module.css
+++ b/packages/components/src/styles/Heading.module.css
@@ -1,2 +1,6 @@
 .heading {
+	white-space: nowrap;
+	max-width: calc(100% - var(--lp-size-32));
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
